# gpi-plant-manager

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Procfile  README.md  config.yaml  kiosk_preview.html  nixpacks.toml  pyproject.toml  requirements.txt  run_dashboard.bat
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: tests.yml
.superpowers/sdd/: completion-fix-report.md  concurrency-fix-report.md  final-review-fix-report.md  scheduler-lifecycle-task-2-report.md  task-2-report.md  task-7-report.md  trim-saw-task-3-report.md
docs/: TEST_DEBT.md  UI-ARCHITECTURE.md  object-api.md  odoo-setup.md  stratustime-api-integration.md  ux-walkthrough-2026-07-02.md
scripts/: backfill_forklift_ontime.py  backfill_production_daily.py  correct_saturday_punches.py  diagnose_odoo_calendar_conflicts.py  diagnose_saturday_punches.py  normalize_odoo_timezones.py  preview_new_leaderboard.py  preview_recycling.py  render_kiosk_preview.py
src/zira_dashboard/: _cache.py  _http_cache.py  _odoo_attendance.py  _odoo_skills.py  _odoo_time_off.py  _schema.py  _zira_persist.py  absence_sync.py  api_keys.py  app.py  attendance.py  attendance_state.py  auth.py  auto_lunch.py  auto_lunch_settings.py  auto_schedule_capacity.py  automated_skill_settings.py  automated_skills.py  awards.py  breakdown_actions.py  calendar_conflict_monitor.py  calendar_conflicts.py  cert_icons.py  cert_lookup.py  custom_dashboards_store.py  dashboard_catalog.py  db.py  deps.py  device_tokens.py  employee_notifications.py  exception_inbox.py  feedback_store.py  forklift_advisor.py  forklift_awards.py  forklift_backfill.py  forklift_client.py  forklift_demand.py  forklift_ingest.py  forklift_queue.py  forklift_score.py  (+70 more)
src/zira_dashboard/routes/: README.md  admin.py  (+36 more)
src/zira_probe/: __init__.py  client.py  config.py  report.py  results.py  runner.py
tests/: conftest.py  test_admin_devices_template.py  test_admin_precompute.py  test_admin_ribbon_vs_widget.py  test_api_keys.py  test_assignment_credit_logging.py  test_attendance.py  test_attendance_state.py  test_auth_middleware.py  test_auth_session.py  test_auto_lunch_decide.py  test_auto_lunch_schema.py  test_auto_lunch_settings.py  test_auto_schedule_capacity.py  test_automated_skill_settings.py  test_automated_skills.py  test_awards.py  test_base_app_template.py  test_cache.py  test_calendar_conflict_monitor.py  test_calendar_conflicts.py  test_cert_icons.py  test_changelog_render.py  test_client.py  test_config.py  test_custom_dashboards_routes.py  test_custom_dashboards_store.py  test_dashboard_catalog.py  test_dashboards_polish.py  test_db.py  test_device_tokens.py  test_employee_notifications.py  test_exception_inbox.py  test_exception_inbox_breakdown.py  test_exception_inbox_breakdown_js.py  test_exception_inbox_breakdown_template.py  test_exceptions_breakdown_routes.py  test_exceptions_odoo_error.py  test_feedback_mine_route.py  test_feedback_odoo.py  (+192 more)
(+316 files in other folders)
